--- a/index.html
+++ b/index.html
@@ -1178,9 +1178,9 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/easein.js"></script>
-    <script src="./assets/js/owl.carousel.min.js"></script>
-    <script src="./assets/js/wow.min.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="/assets/js/easein.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
+    <script src="/assets/js/wow.min.js"></script>
+    <script src="/assets/js/app.js"></script>
   </body>
 </html>
